Project converted to being fully modular